--- a/styles.css
+++ b/styles.css
@@ -603,7 +603,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.405);  /* Sombra suave */
 }
 
-.infoCliente input, .infoProyecto input, .infoProyecto textarea, .infoProyecto select {
+.infoCliente input, .infoProyecto input, .infoProyecto textarea, .infoProyecto select, infoCliente select {
     width: 100%;
     border: 2px solid #7da9fc;
     border-width: 2px;
